src/snapshots/afrotd__parser__tests__interpretation_8.5.1_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 5
  - 1
index: 4
text: "B1 fängt einen Vorwärtspass oder einen Fumble oder einen\nFree oder Scrimmage Kick zwischen seiner B-5 und der Goalline von\nB ab und sein Eigenschwung trägt ihn in die Endzone. Der Ball wird in\nTeam B’s Besitz in der Endzone für dead erklärt."
ruling: "Team B’s\nBall an der Stelle, an der der Pass oder Fumble abgefangen oder der\ngegnerische Kick gefangen wurde. Die Regelung ist die gleiche, wenn\nB1 einen gegnerischen Fumble, einen Rückpass oder einen Kick unter\nähnlichen Bedingungen recovert."
