src/snapshots/afrotd__parser__tests__interpretation_8.5.1_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 5
  - 1
index: 7
text: "Team A versucht von hinter der eigenen Goalline aus zu punten, aber A36 mufft den Ball. Nachdem A36 den Ball recovert hat, berührt er einen Pylon am Schnittpunkt der Seitenlinie mit der Goalline."
ruling: "Safety, es sei denn, der gesamte Ball befindet sich jenseits\nder Goalline, als A36 die Seitenlinie oder den Pylon berührt. Der Ball\nwird an seiner vordersten Stelle dead, wenn A36 den Pylon oder die\nSeitenlinie berührt (Regeln 2.31.3, 4.2.4.d)."
