src/snapshots/afrotd__parser__tests__interpretation_8.6.1_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 6
  - 1
index: 1
text: "Team A’s Fumble berührt den Pylon an der Schnittstelle von der\nB-Goalline mit der Seitenlinie."
ruling: "Touchback. Team B’s Ball von\nder B-20 (Regeln 7.2.4.c und 4.2.3.b)."
