src/snapshots/afrotd__parser__tests__interpretation_8.6.1_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 6
  - 1
index: 2
text: "B1 fängt Team A’s legalen Vorwärtspass in seiner eigenen Endzone ab und danach reißt A1 ihm den Ball aus den Händen, während\nsie sich in der Endzone befinden."
ruling: "Touchdown. Der Ball ist\nnicht automatisch dead, wenn er abgefangen wird, aber er wird dead,\nwenn A1 in Ballbesitz kommt. Wenn jedoch nach der Meinung des\nSchiedsrichters eine deutliche Zeitspanne vergangen war, in der der\nTeam B-Spieler keine Anstalten machte, den abgefangenen Ball aus\nder Endzone hinaus zu tragen, ist die Anerkennung des Touchbacks\ngerechtfertigt."
